--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/vector__2_"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/vector__3_"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SetupYourFridge">
+        android:theme="@style/Theme.SetupYourFridge"
+       >
         <activity
             android:name=".MainActivity"
             android:exported="true"
